@@ -29,8 +29,8 @@ extern uint32_t* partial_sieve(mpz_t start, UV length, UV maxprime);
 extern char* pidigits(UV n);
 extern char* bernreal(mpz_t zn, unsigned long prec);
 extern char* harmreal(mpz_t zn, unsigned long prec);
-extern char* intzetareal(unsigned long s, unsigned long prec);
-extern char* intriemannrreal(mpz_t n, unsigned long prec);
+extern char* zetareal(mpf_t r, unsigned long prec);
+extern char* riemannrreal(mpf_t r, unsigned long prec);
 
 extern UV* sieve_primes(mpz_t low, mpz_t high, UV k, UV *rn);
 extern UV* sieve_twin_primes(mpz_t low, mpz_t high, UV twin, UV *rn);
